--- a/src/style.css
+++ b/src/style.css
@@ -6,9 +6,14 @@ body {
 
 .container {
   margin: 120px auto;
+  padding: 10px;
   max-width: 600px;
   background-color: hsla(0, 80%, 100%, 0.7);
   border-radius: 6px;
+}
+
+header {
+  margin-bottom: 20px;
 }
 
 h1 {
@@ -16,5 +21,47 @@ h1 {
   font-size: 30px;
   line-height: 1.5;
   text-align: center;
+  color: #50427f;
+}
+
+form {
+  padding: 20px;
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.instructions {
+  padding: 16px;
+  border: 2px solid #50427f;
+  width: 80%;
+  font-size: 14px;
+  border-radius: 10px;
+  line-height: 15px;
+  color: #50427f;
+}
+
+.submit-button {
+  margin-left: 10px;
+  background: #50427f;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 14px 24px;
+  font-size: 14px;
+}
+
+.poem {
+  font-size: 16px;
+  padding: 10px;
+  line-height: 2;
+}
+
+footer {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 13px;
+}
+
+.link {
   color: #50427f;
 }
